bugfix session zalomenie mena ak presahuje cell boundary pridana podpora pre diakritiku mysql connections pool timeout - treba odskusat session start end picker na textbox ajax update session bug cpp forbiden syscall fix in/out add form code highligh names,surnames roles form

--- a/src/main/webapp/resources/css/mainCss.css
+++ b/src/main/webapp/resources/css/mainCss.css
@@ -300,6 +300,10 @@ footer p {
 
 .sessionTable td {
 	text-align: center;
+	
+}
+.sessionTable th {
+	word-wrap: break-word;	
 }
 
 .firstRow a {
@@ -427,6 +431,16 @@ div.greyButtonDiv:HOVER {
 .width200px {
 	min-width: 150px;
 }
+
+.width130px {
+	
+	width: 130px;
+}
+
+.wrapped{
+	word-wrap: break-word;
+}
+
 
 .inlineDiv {
 	display: inline-block;
